2010-09-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	Avoid global recursive calls to kill-buffer-hooks, and fit into 80 cols.
	* textmodes/ispell.el (ispell-process-buffer-name): Remove.
	(ispell-start-process): Avoid setq and simplify logic.
	(ispell-init-process): Setup kill-buffer-hook locally when needed.
	(kill-buffer-hook): Don't use it globally with code that uses
	expand-file-name since that may call kill-buffer via
	code_conversion_restore.

2010-09-04  Noorul Islam K M  <noorul@noorul.com>  (tiny change)

	* emacs-lisp/package.el (package-directory-list): Only call
	file-name-nondirectory on a string.

2010-09-02  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/package.el (package--download-one-archive):
	Ensure that archive-contents is valid before saving it.
	(package-activate-1, package-mark-obsolete, define-package)
	(package-compute-transaction, package-list-maybe-add): Use push.

2010-09-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	Use SMIE's blink-paren for octave-mode.
	* progmodes/octave-mod.el (octave-font-lock-close-quotes):
	Backslashes do not escape single-quotes, single-quotes do.
	(octave-block-else-regexp, octave-block-end-regexp)
	(octave-block-match-alist): Remove.
	(octave-smie-bnf-table): New var, with old content.
	(octave-smie-op-levels): Use it.
	(octave-smie-closer-alist): New var.
	(octave-mode): Use it.  Setup smie-blink-matching and electric-indent.
	(octave-blink-matching-block-open): Remove.
	(octave-reindent-then-newline-and-indent, octave-electric-semi)
	(octave-electric-space): Let self-insert-command run expand-abbrev and
	blink parens.

	* electric.el (electricity): New group.
	(electric-indent-chars): New var.
	(electric-indent-post-self-insert-function): New fun.
	(electric-indent-mode): New minor mode.
	(electric-pair-skip-self): New custom.
	(electric-pair-post-self-insert-function): New function.
	(electric-pair-mode): New minor mode.
